# zippy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CDREnd.h  Utils.h  ZipConst.h  ZipFileWriter.h  ZipReader.h  ZipWriter.h
source/: CDREnd.cpp  Utils.cpp  ZipFileWriter.cpp  ZipReader.cpp  ZipWriter.cpp  main.cpp
